<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tools.aytech.digitalnoteapp.LandingPage">
    <item
        android:id="@+id/ACTION_CREATE_SAMPLE"
        android:orderInCategory="100"
        android:title="@string/create_sample_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/ACTION_DELETE_ALL"
        android:orderInCategory="100"
        android:title="@string/delete_all_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/ACTION_GRID_LAYOUT"
        android:icon="@drawable/ic_note_grid_view"
        android:title="@string/note_grid_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ACTION_LINEAR_LAYOUT"
        android:icon="@drawable/ic_note_linear_view"
        android:title="@string/note_linear_view_vertical"
        app:showAsAction="ifRoom" />
</menu>
